# jd-py-aula-02

./: .gitignore  desafio_aula_02.ipynb  ex_aula_02_01.py  ex_aula_02_02.ipynb  exercicios.py  pyproject.toml
