[tool.poetry]
name = "aula-02"
version = "0.1.0"
description = ""
authors = ["Vinicius Aponte <apontevinicius@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
